--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Release
 
+permissions:
+    contents: write
+
 on:
     push:
         tags:
@@ -24,7 +27,7 @@ jobs:
                   go build -ldflags "-X main.version=${GITHUB_REF_NAME} \
                                       -X main.commit=$(git rev-parse --short HEAD) \
                                       -X main.date=$(date +%Y-%m-%d)" \
-                            -o myapp
+                            ./cmd/sso -o main
 
             - name: Create GitHub Release
               uses: softprops/action-gh-release@v2
