--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
     build:
-        runs-on: windows, linux
+        runs-on: ubuntu-latest
 
         steps:
             - name: Checkout code
