--- a/config/local.yaml
+++ b/config/local.yaml
@@ -5,3 +5,12 @@ refresh_ttl: 24h
 grpc:
     port: 44044
     timeout: 5s
+
+database:
+    host: localhost
+    port: 3306
+    username-db: root
+    password:
+    dbname: sso
+
+default_secret: "secret"
